<resources>
    <string name="app_name">Movies</string>
    <string name="show_more">Показать еще</string>
    <string name="btn_actors">Актёры</string>
    <string name="votes">%s\K</string>
    <string name="tvYearGenresCountriesLength">%s, %s\n%s, %s ч %d мин</string>
    <string name="tv_actors">В ролях: %s и другие</string>
    <string name="cd_movie_poster">Movie poster</string>
    <string name="actors_item_count">%s</string>
    <string name="actors">Актёры</string>
    <string name="tv_film_team">Съёмочная группа</string>
    <string name="film_team_item_count">%s</string>
    <string name="tv_review">Рецензии</string>
    <string name="tv_frame">Изображения</string>
    <string name="tv_trailers">Трейлеры</string>
    <string name="menu_item_favorite">Избранное</string>
    <string name="tv_review_list_all">Все</string>
    <string name="menu_item_search">search</string>
    <string name="activity_label_favorite">Избранное</string>
    <string name="activity_label_actors">Актёры</string>
    <string name="activity_label_review">Рецензии</string>
    <string name="activity_label_images">Изображения</string>
    <string name="btn_imageType_posters">Постеры</string>
    <string name="btn_imageType_shooting">Съемки</string>
    <string name="btn_imageType_frames">Кадры</string>
    <string name="activity_label_trailers">Трейлеры</string>
    <string name="label_review">Отзыв</string>
    <string name="search_person">Введите имя…</string>
    <string name="search_movie">Введите название фильма…</string>
</resources>