<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".presentation.ImageListActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFrames"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/divider_color"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/btn_imageType_frames"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShooting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/divider_color"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/btn_imageType_shooting"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosters"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/divider_color"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/btn_imageType_posters"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                app:cornerRadius="8dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/image_item"/>
</androidx.constraintlayout.widget.ConstraintLayout>